--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <img src="./assets/images/avatar-jessica.jpeg" alt="profile image">
     <h1>Jessica Randall</h1>
     <p>London, United Kingdom</p>
-    <quote>"Front-end developer and avid reader."</quote>
+    <p class="quote">"Front-end developer and avid reader."</p>
     <button>GitHub</button>
     <button>Frontend Mentor</button>
     <button>LinkedIn</button>
